--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VS Code Portfolio</title>
+    <title>Main page</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="icon" href="image/logo.png">
     <link rel="stylesheet" href="style.css">
