--- a/About.html
+++ b/About.html
@@ -456,7 +456,7 @@
 
                         <div class="flex flex-col lg:flex-row items-center lg:items-start" data-aos="fade-up">
                             <div class="lg:w-1/3 mb-8 lg:mb-0 lg:mr-8" data-aos="fade-right">
-                                <img src="image/profile.jpg" class="w-full h-auto rounded-lg" alt="Profile Picture">
+                                <img src="image/IMG_20211222_1324501 (2).jpg" class="w-full h-auto rounded-lg" alt="Profile Picture">
                             </div>
                             <div class="lg:w-2/3" data-aos="fade-left">
                                 <h3 class="text-2xl font-semibold italic mb-4">Web Developer :</h3>
